--- a/java-main/food-order-system/项目技术报告.md
+++ b/java-main/food-order-system/项目技术报告.md
@@ -1,87 +1,106 @@
-# 餐饮点餐系统 - 项目技术报告
+# 餐饮点餐系统 - 项目汇报
 
-## 1. 项目简介
-本项目是一个基于 **Spring Boot** 和 **Vue/jQuery** 技术栈开发的餐饮点餐系统。系统主要服务于两类用户：普通顾客和商家。顾客可以在线浏览菜单、下单点餐并查看订单状态；商家可以管理餐品信息（上架/下架/修改）以及处理顾客订单（发货/拒单）。项目采用前后端分离的开发模式（逻辑分离，物理部署在同一应用中），界面简洁美观，交互流畅。
+## Slide 1: 封面
+- **项目名称**: 餐饮点餐系统 (Food Order System)
+- **汇报人**: [您的姓名]
+- **日期**: 2025年12月29日
 
-## 2. 系统架构
-本系统采用经典的 **B/S (Browser/Server)** 架构，后端基于 **MVC (Model-View-Controller)** 设计模式进行分层开发。
+## Slide 2: 项目背景与简介
+- **项目背景**: 随着数字化转型，传统餐饮业急需线上点餐解决方案以提升效率。
+- **项目目标**: 构建一个轻量级、易扩展、界面友好的餐饮点餐平台。
+- **核心用户**:
+    - **顾客**: 在线浏览、点餐、查看订单。
+    - **商家**: 菜品管理、订单处理、营收统计。
+- **设计理念**: 前后端分离开发模式，注重用户体验与系统安全性。
 
-*   **表现层 (Controller)**: 负责接收前端请求，参数校验，并调用服务层处理业务逻辑。
-*   **业务层 (Service)**: 封装核心业务逻辑，如订单处理、库存扣减、用户验证等。
-*   **持久层 (DAO/Mapper)**: 使用 MyBatis-Plus 框架与 MySQL 数据库进行交互。
-*   **前端**: 采用 HTML5 + CSS3 + jQuery 进行页面渲染和数据交互，通过 AJAX 异步请求与后端通信。
+## Slide 3: 系统架构设计
+- **架构模式**: B/S (Browser/Server) 架构
+- **设计模式**: MVC (Model-View-Controller) 分层设计
+    - **表现层 (Controller)**: 处理 HTTP 请求，参数校验。
+    - **业务层 (Service)**: 核心业务逻辑（订单流转、库存控制）。
+    - **持久层 (DAO)**: 数据持久化，与 MySQL 交互。
+- **交互方式**: AJAX 异步通信，JSON 数据格式。
 
-## 3. 后端技术栈
-后端核心基于 **Java 17** 和 **Spring Boot 3.4.0** 构建，使用了以下关键技术：
+## Slide 4: 后端技术栈
+- **核心框架**: Spring Boot 3.4.0 (快速开发，自动配置)
+- **开发语言**: Java 17 (LTS版本，高性能)
+- **ORM框架**: MyBatis-Plus 3.5.5 (简化 SQL 操作，支持 Lambda)
+- **数据库**: MySQL 8.0 (稳定可靠的关系型数据库)
+- **工具库**:
+    - Lombok (简化样板代码)
+    - MySQL Connector/J 8.2.0 (修复高危漏洞)
+- **安全机制**: 自定义过滤器防御路径遍历攻击 (CVE-2025-41242)。
 
-| 技术组件 | 版本 | 说明 |
-| :--- | :--- | :--- |
-| **Java Development Kit** | **JDK 17** | 长期支持版本，提供更好的性能和新特性（如Record类、文本块等）。 |
-| **Spring Boot** | **3.4.0** | 核心框架，提供自动配置、内嵌 Tomcat 容器，简化开发。 |
-| **Spring Web** | 3.4.0 | 提供 RESTful API 支持，处理 HTTP 请求。 |
-| **MyBatis-Plus** | **3.5.5** | 增强版 ORM 框架，简化 CRUD 操作，支持 Lambda 表达式查询。 |
-| **MySQL Connector/J** | **8.2.0** | 数据库驱动，修复了旧版本的高风险 CVE 漏洞。 |
-| **Lombok** | 1.18.32 | 简化 Java 代码，自动生成 Getter/Setter/Builder 等样板代码。 |
-| **Custom Security** | N/A | 自定义安全过滤器 (`PathTraversalProtectionFilter`)，用于防御路径遍历攻击。 |
+## Slide 5: 前端技术栈与UI优化
+- **基础技术**: HTML5, CSS3, JavaScript
+- **核心库**: jQuery 3.6.4 (DOM 操作，AJAX 封装)
+- **UI 设计**:
+    - **风格**: 现代简约风格，卡片式布局。
+    - **字体**: Google Fonts (Noto Sans SC) 优化中文显示。
+    - **图标**: FontAwesome 6.4.0 矢量图标库。
+- **交互亮点**:
+    - 商家轮播展示 (Carousel)。
+    - 玻璃拟态 (Glassmorphism) 登录界面。
+    - 响应式设计 (适配移动端与桌面端)。
 
-## 4. 前端技术栈
-前端界面经过全面美化，采用了现代化的设计风格：
+## Slide 6: 数据库设计
+- **User (用户表)**:
+    - 存储用户基本信息、角色（商家/顾客）。
+- **Food (餐品表)**:
+    - 关联商家，存储菜品名称、价格、库存、图片。
+- **OrderInfo (订单表)**:
+    - 核心交易数据，记录下单人、餐品、数量、状态、时间。
+- **UserAddress (地址表)**:
+    - 用户收货地址管理。
+- **关系**: 1个商家 -> N个餐品；1个用户 -> N个订单。
 
-| 技术组件 | 说明 |
-| :--- | :--- |
-| **HTML5 / CSS3** | 页面结构与样式基础，使用了 Flexbox 和 Grid 布局，支持响应式设计。 |
-| **jQuery** | **3.6.4** | 简化 DOM 操作和 AJAX 请求，处理前后端数据交互。 |
-| **FontAwesome** | **6.4.0** | 提供丰富的矢量图标（如购物车、用户、商店图标），提升视觉体验。 |
-| **Google Fonts** | **Noto Sans SC** | 使用无衬线字体，提升中文阅读体验。 |
-| **Glassmorphism** | CSS特效 | 登录页采用“玻璃拟态”设计，增加界面质感。 |
+## Slide 7: 核心功能 - 顾客端
+- **账户管理**: 注册、登录、退出。
+- **浏览体验**:
+    - 按商家分组轮播展示。
+    - 查看餐品详情（图片、价格、实时库存）。
+- **交易流程**:
+    - 购物车/直接下单。
+    - 填写收货信息（姓名、电话、地址）。
+- **订单追踪**:
+    - 实时查看订单状态（待处理/已发货/已完成）。
+    - 确认收货。
 
-## 5. 数据库设计
-系统使用 **MySQL 8.0** 数据库，主要包含以下核心数据表：
+## Slide 8: 核心功能 - 商家端
+- **工作台**: 商家专属仪表盘。
+- **餐品管理**:
+    - 图片上传、信息编辑。
+    - 上架/下架控制、库存调整。
+- **订单处理**:
+    - 实时接收新订单通知。
+    - **发货**: 填写预计送达时间。
+    - **拒单**: 异常情况处理（自动回滚库存）。
 
-1.  **用户表 (`user`)**: 存储用户信息（ID、用户名、密码、手机号、地址、用户类型[商家/顾客]）。
-2.  **餐品表 (`food`)**: 存储餐品信息（ID、名称、价格、库存、图片路径、所属商家ID）。
-3.  **订单表 (`order_info`)**: 存储订单详情（ID、用户ID、餐品ID、数量、总价、订单状态、下单时间）。
-4.  **地址表 (`user_address`)**: (可选) 存储用户的常用收货地址。
+## Slide 9: 项目代码结构
+- `src/main/java`: 后端源码
+    - `config`: 安全与Web配置
+    - `controller`: API 接口定义
+    - `service`: 业务逻辑实现
+    - `entity`: 数据库实体类
+    - `mapper`: 数据库接口
+- `src/main/resources`: 资源文件
+    - `static`: 前端页面 (HTML/CSS/JS)
+    - `application.yml`: 系统配置
 
-## 6. 核心功能模块
+## Slide 10: 安全性与稳定性
+- **漏洞修复**:
+    - 升级 MySQL 驱动至 8.2.0。
+    - 升级 Spring Boot 至 3.4.0。
+- **安全防护**:
+    - 实现 `PathTraversalProtectionFilter` 拦截非法路径请求。
+- **异常处理**:
+    - 全局异常捕获，统一返回 JSON 格式错误信息。
+    - 前端网络异常自动提示。
 
-### 6.1 顾客端 (User)
-*   **用户注册/登录**: 支持普通用户注册和登录。
-*   **浏览菜单**: 按商家分组展示餐品，支持查看餐品图片、价格和库存。
-*   **在线下单**: 选择餐品数量，填写收货信息（姓名、电话、地址）进行下单。
-*   **订单管理**: 查看历史订单状态（待发货、已发货、已拒单），支持手动刷新订单列表。
-
-### 6.2 商家端 (Merchant)
-*   **商家登录**: 商家专属登录入口。
-*   **餐品管理**:
-    *   **新增餐品**: 上传图片、设置名称、价格和库存。
-    *   **编辑餐品**: 修改餐品信息。
-    *   **删除餐品**: 下架不再销售的餐品。
-*   **订单处理**:
-    *   **查看待处理订单**: 实时查看新订单。
-    *   **发货**: 确认订单并填写预计送达时间。
-    *   **拒单**: 拒绝无法配送的订单，库存自动回滚。
-
-## 7. 项目结构说明
-```text
-food-order-system/
-├── src/main/java/com/example/
-│   ├── config/          # 配置类 (SecurityConfig, WebConfig)
-│   ├── controller/      # 控制器 (API 接口)
-│   ├── entity/          # 实体类 (User, Food, OrderInfo)
-│   ├── mapper/          # 数据访问接口 (MyBatis Mapper)
-│   ├── service/         # 业务逻辑层
-│   └── FoodOrderSystemApplication.java # 启动类
-├── src/main/resources/
-│   ├── mapper/          # MyBatis XML 映射文件
-│   ├── static/          # 静态资源 (HTML, CSS, JS, Images)
-│   │   ├── index.html   # 登录/注册页
-│   │   ├── user.html    # 顾客主页
-│   │   ├── merchant.html # 商家管理页
-│   │   └── merchant-order.html # 商家订单页
-│   └── application.yml  # 项目配置文件
-└── pom.xml              # Maven 依赖管理
-```
-
-## 8. 总结
-本项目是一个功能完备的入门级全栈应用，演示了 Spring Boot 3.x 与 MyBatis-Plus 的集成使用，以及如何通过原生前端技术构建现代化的用户界面。项目特别注重代码的安全性和规范性，修复了已知的 CVE 漏洞，并采用了分层架构以保证代码的可维护性。
+## Slide 11: 总结与展望
+- **项目成果**: 完成了功能闭环的餐饮点餐系统，界面美观，运行稳定。
+- **技术亮点**: 全栈开发，前后端分离思想，注重安全。
+- **未来展望**:
+    - 引入 Redis 缓存热点数据。
+    - 增加 WebSocket 实现消息实时推送。
+    - 集成第三方支付功能。
